retro to gametracker

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ append head
 block content
   div.contentReview
     h3= title
-    p Welcome to Retro Game Tracker! The website aimed to help you keep track of all you game collections!
+    p Welcome to Game Tracker! The website aimed to help you keep track of all you game collections!
 
   div
     h4 Discover your next favorite game
