--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="Retro Game Tracker"
+        title="Game Tracker"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/images.css')
         link(rel='stylesheet' href='/stylesheets/specific-game.css')
@@ -10,7 +10,7 @@ html
         link(rel="stylesheet", href="/stylesheets/headers.css")
         link(rel="stylesheet", href="/stylesheets/containers.css")
         link(rel="stylesheet", href="/stylesheets/content.css")
-        <meta name="title" property="og:title" content="Retro Game Tracker">
+        <meta name="title" property="og:title" content="Game Tracker">
         <meta property="og:type" content="website">
         <meta name="image" property="og:image" content="https://i.imgur.com/VoPTBa5.png">
         <meta name="description" property="og:description" content="Come organize your gaming list">
@@ -28,6 +28,6 @@ html
         a(class='nav-link-active' href="/users/login") Log In
         a(class='nav-link-active' href="/users/register") Register
         a(class='nav-link-active' href="/users/login/demo") Demo User
-      a(href="https://github.com/equan1090/retro-tracker" target="_blank").nav-link-active GitHub Source
+      a(href="https://github.com/gobugi/gametracker" target="_blank").nav-link-active GitHub Source
 
     block content
